# topoptlab

./: .coverage  .gitignore  .gitignore~  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  README.md  ROADMAP.md  ci.yaml  code_for_Niels.py  get_blackwhite_design.py  mma.py  old_cholmod.py  output_designs.py  pyproject.toml  setup.cfg  surface-displacements.csv  test.py  topopt.py  topopt_cholmod.py  topopt_haevi.py  topopt_jax.py  topopt_manufacturing.py  topopt_test.py  topopth.py  topoptm.py
applications/: README.md  cantilever.py  cantilever_multiload.py  cantilever_passive.py  check_3dplot.py  fem_heatexpansion.py  filter_bug.py  folding_mechanism.py  force_inverter.py  heatplate2d.py  mbb_beam.py  mbb_beam2d.py  mbb_beam3d.py  plot_materialinterpolation.py  visualize_filter.py
examples/: README.md  plot_materialinterpolation.py
images/: regular_mesh.py
monolithic_codes/: .gitignore  README.md  fem.py  homogenization.py  topopt.py  topopt88.py  topopt88_cholmod.py  topopt88_rank2.py  topopt88bh.py  topopt88bh_control.py  topopt88bh_controlshift.py  topopt88h.py  topopt88m.py  topopt88mh.py  topopt_cholmod.py  topopt_manufacturing.py  topoptbh-bw_surface-displacements.csv  topopth.py  topopth_time.py
paper/: paper.bib  paper.md
tests/: test_AMfilter.py  test_accelerators.py  test_amg.py  test_assemblymodes.py  test_compliance.py  test_elements.py  test_examples.py  test_filters.py  test_foldingmech.py  test_geometryparser.py  test_gmg.py  test_hexahedron.py  test_inverter.py  test_linsolver.py  test_materialinterpolation.py  test_matrixinds.py  test_mesh.py  test_passive.py  test_quadrilateral.py  test_rotations.py  test_solver.py  test_stiffness_tensors.py  test_stress_lbracket.py  test_third_medium_contact.py  test_utils.py  test_voigt.py
topoptlab/: __init__.py  accelerators.py  amg.py  blocksparse_precond.py  compliance_minimization.py  compliant_mechanisms.py  composite_bounds_2d.py  composite_bounds_3d.py  design_analysis.py  draw_functions.py  example_cases.py  fdm.py  fem.py  filters.py  folding_mechanism.py  geometries.py  geometry_parser.py  gmg.py  linear_solvers.py  log_utils.py  neohooke.py  (+15 more)
(+368 files in other folders)
